docs: enhance contents and add folder depth

--- a/docs/002.plan/002.dev/Phase1/002.api_specification_KOR.md
+++ b/docs/002.plan/002.dev/Phase1/002.api_specification_KOR.md
@@ -1,30 +1,30 @@
 # Apix API Specification
 
-This document is the official API specification for the **Apix** project.
-It defines the core endpoints (`auth`, `resource`, `verify`) for MVP development and details the **x402 protocol** flow.
+이 문서는 **Apix** 프로젝트의 공식 API 명세서입니다.
+MVP 개발을 위한 핵심 엔드포인트(`auth`, `resource`, `verify`)를 정의하며, **x402 프로토콜** 흐름을 상세히 기술합니다.
 
 ---
 
-## 1. Overview
+## 1. 개요 (Overview)
 
 *   **Base URL**: `https://api.apix.market/v1` (Production) / `http://localhost:3000/v1` (Dev)
 *   **Authentication**: Bearer Token (JWT)
-*   **Response Format**: All responses follow a standard wrapper format containing `success`, `data`, and `error` fields.
-*   **Monetary Values**: Crypto amounts are always handled as **Strings** (e.g., in Wei) to prevent precision loss.
+*   **Response Format**: 모든 응답은 `success`, `data`, `error` 필드를 포함하는 표준 래퍼(Standard Wrapper) 형식을 따릅니다.
+*   **Monetary Values**: 암호화폐 금액은 정밀도 손실 방지를 위해 항상 **String** 타입(Wei 단위 등)으로 처리합니다.
 
 ---
 
-## 2. API Specification (OpenAPI 3.0 YAML)
+## 2. API 명세 (OpenAPI 3.0 YAML)
 
-You can copy the YAML code below and paste it into [Swagger Editor](https://editor.swagger.io/) to visualize it or use it for code generation.
+아래의 YAML 코드를 [Swagger Editor](https://editor.swagger.io/)에 붙여넣어 시각화하거나, 코드 생성에 활용할 수 있습니다.
 
 ```yaml
 openapi: 3.0.3
 info:
   title: Apix API Specification
   description: |
-    REST API specification for the Apix platform.
-    Supports the x402 protocol (monetized API calls and payment verification) and cryptocurrency wallet-based authentication.
+    Apix 플랫폼의 REST API 명세서입니다. 
+    x402 프로토콜(유료 API 호출 및 결제 검증)과 암호화폐 지갑 기반의 인증을 지원합니다.
   version: 1.0.0
   contact:
     name: Apix Development Team
@@ -38,20 +38,20 @@ servers:
 
 tags:
   - name: Auth
-    description: Wallet connection and authentication
+    description: 지갑 연결 및 인증
   - name: Resource
-    description: Monetized resource access (x402 Trigger)
+    description: 유료 리소스 접근 (x402 Trigger)
   - name: Payment
-    description: Payment verification and session approval
+    description: 결제 검증 및 세션 승인
 
 paths:
   /auth/connect:
     post:
       tags:
         - Auth
-      summary: Wallet Connect and Session Creation
+      summary: 지갑 연결 및 세션 생성 (Wallet Connect)
       description: |
-        Verifies the user's Avalanche wallet address and signed message to issue a session (JWT).
+        사용자의 Avalanche 지갑 주소와 서명된 메시지를 검증하여 세션(JWT)을 발급합니다.
       requestBody:
         required: true
         content:
@@ -60,7 +60,7 @@ paths:
               $ref: '#/components/schemas/AuthRequest'
       responses:
         '200':
-          description: Login Successful
+          description: 로그인 성공
           content:
             application/json:
               schema:
@@ -70,35 +70,35 @@ paths:
                       data:
                         $ref: '#/components/schemas/AuthResponseData'
         '400':
-          description: Invalid Request (e.g., Signature Mismatch)
+          description: 잘못된 요청 (서명 불일치 등)
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/StandardError'
 
-  /api/resource:
+  /proxy/{listing_id}:
     get:
       tags:
         - Resource
-      summary: Access Monetized Resource (Trigger 402 Error)
+      summary: 테스트용 유료 리소스 호출 (Trigger 402 Error)
       description: |
-        Attempts to access a monetized API resource.
-        If the user does not have access rights (credits/subscription), it returns a `402 Payment Required` error
-        and includes the necessary payment context (`payment_context`) in the response body.
+        프록시를 통해 유료 API 리소스에 접근을 시도합니다. 
+        사용자가 접근 권한(크레딧/구독)이 없을 경우 `402 Payment Required` 에러를 반환하며, 
+        응답 본문에 결제에 필요한 컨텍스트(`payment_context`)를 포함합니다.
       parameters:
-        - name: resourceId
-          in: query
-          required: false
+        - name: listing_id
+          in: path
+          required: true
           schema:
             type: string
-            example: "sample_resource_01"
-          description: ID of the resource to request
+            example: "sample_listing_01"
+          description: 접근할 리스팅의 ID
       security:
         - bearerAuth: []
-        - {} # Allow 402 response even without auth (depending on implementation policy)
+        - {} # 인증이 없어도 402 응답을 받을 수 있도록 허용 가능 (구현 정책에 따름)
       responses:
         '200':
-          description: Access Successful (Already paid or free)
+          description: 접근 성공 (이미 결제됨 또는 무료)
           content:
             application/json:
               schema:
@@ -109,10 +109,10 @@ paths:
                         type: object
                         example: { "message": "Secure Data Content", "value": 12345 }
         '402':
-          description: Payment Required
+          description: 결제 필요 (Payment Required)
           headers:
             X-Apix-Request-ID:
-              description: Unique ID identifying the payment request
+              description: 결제 요청을 식별하는 고유 ID
               schema:
                 type: string
           content:
@@ -120,16 +120,16 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error402'
         '401':
-          description: Authentication Failed
+          description: 인증 실패
 
   /verify:
     post:
       tags:
         - Payment
-      summary: Verify Payment Transaction
+      summary: 결제 트랜잭션 검증 (Verify Payment)
       description: |
-        Verifies the validity of the payment after the client completes it on the blockchain
-        by sending the generated `tx_hash` and `request_id` to the server.
+        클라이언트가 블록체인 상에서 지불을 완료한 후, 
+        생성된 `tx_hash`와 `request_id`를 서버로 전송하여 유효성을 검증합니다.
       requestBody:
         required: true
         content:
@@ -140,7 +140,7 @@ paths:
         - bearerAuth: []
       responses:
         '200':
-          description: Verification Successful
+          description: 검증 성공
           content:
             application/json:
               schema:
@@ -150,7 +150,7 @@ paths:
                       data:
                         $ref: '#/components/schemas/VerifyResponseData'
         '400':
-          description: Verification Failed (e.g., Invalid TX, Amount Mismatch)
+          description: 검증 실패 (트랜잭션 조회 실패, 금액 불일치 등)
           content:
             application/json:
               schema:
@@ -208,15 +208,15 @@ components:
       properties:
         walletAddress:
           type: string
-          description: User's wallet address
+          description: 사용자의 지갑 주소
           example: "0x71C7656EC7ab88b098defB751B7401B5f6d8976F"
         signature:
           type: string
-          description: Digital signature for the message
+          description: message에 대한 전자서명 값
           example: "0xabcdef..."
         message:
           type: string
-          description: Original signed message (Timestamp recommended)
+          description: 서명된 원본 메시지 (타임스탬프 포함 권장)
           example: "Login to Apix: 1700000000"
 
     AuthResponseData:
@@ -240,11 +240,11 @@ components:
       properties:
         request_id:
           type: string
-          description: Request ID received from the 402 response
+          description: 402 응답 시 발급받은 요청 ID
           example: "req_550e8400-e29b-41d4-a716-446655440000"
         tx_hash:
           type: string
-          description: Transaction hash generated after on-chain payment completion
+          description: 블록체인에서 결제 완료 후 발생한 트랜잭션 해시
           example: "0x88df016429689c079f3b5f..."
 
     VerifyResponseData:
@@ -253,13 +253,17 @@ components:
         status:
           type: string
           example: "verified"
-        redirectUrl:
+        redirect_url:
           type: string
-          description: (Optional) URL to redirect to the original resource
+          description: (Optional) 원본 리소스로 리디렉션할 URL
           example: "https://api.apix.market/data/secure/123"
-        tempToken:
+        access_token:
           type: string
-          description: (Optional) One-time/Short-term token for accessing the resource
+          description: (Optional) 해당 리소스 접근을 위한 일회성/단기 토큰
+        expires_in:
+          type: integer
+          description: (Optional) 토큰 유효 시간 (초 단위)
+          example: 3600
 
     # --- x402 Specific Error Schema ---
     Error402:
@@ -285,7 +289,7 @@ components:
               example: "req_550e8400-e29b-41d4-a716-446655440000"
             payment_context:
               type: object
-              description: Detailed information required for payment
+              description: 결제에 필요한 상세 정보
               properties:
                 chain_id:
                   type: integer
@@ -295,13 +299,13 @@ components:
                   example: "AVAX"
                 amount_wei:
                   type: string
-                  description: Payment amount (in Wei, as String)
+                  description: 결제 금액 (Wei 단위, 문자열)
                   example: "10000000000000000"
                 recipient_address:
                   type: string
                   example: "0xSellerAddress..."
                 memo:
                   type: string
-                  description: Memo or data to include in the transaction
+                  description: 트랜잭션에 포함해야 할 메모 또는 데이터
                   example: "req_550e8400..."
 ```
