--- a/docs/002.plan/002.dev/Phase1/003.db_schema.md
+++ b/docs/002.plan/002.dev/Phase1/003.db_schema.md
@@ -41,6 +41,8 @@ erDiagram
         uuid seller_id FK
         varchar name
         varchar base_url "Origin API Endpoint"
+        varchar origin_auth_header "Auth Header Key (e.g. Authorization)"
+        text origin_auth_value "Auth Value (Encrypted)"
         boolean is_active
     }
 
@@ -59,6 +61,7 @@ erDiagram
         varchar tx_hash UK "On-chain TX Hash"
         varchar status "PENDING, PAID, FAILED"
         bigint amount_paid_wei
+        text memo "Payment Memo"
         timestamp expires_at
         timestamp verified_at
     }
@@ -85,6 +88,8 @@ Represents the API services registered by sellers for monetization.
 | `seller_id` | UUID | FK -> `users.id` | Owner of the listing. |
 | `name` | VARCHAR(100) | NOT NULL | Display name of the API service. |
 | `base_url` | TEXT | NOT NULL | The actual upstream URL to proxy requests to. |
+| `origin_auth_header` | VARCHAR(100) | DEFAULT 'Authorization' | Header key for upstream auth. |
+| `origin_auth_value` | TEXT | NULL | Encrypted credential for upstream auth. |
 | `description` | TEXT | NULL | Markdown supported description. |
 | `categories` | TEXT[] | NULL | Array of category tags for discovery. |
 | `is_active` | BOOLEAN | DEFAULT TRUE | Soft delete/pause toggle. |
@@ -111,7 +116,8 @@ The ledger for the **x402 Protocol**. Tracks the lifecycle of a payment challeng
 | `pricing_tier_id`| UUID | FK -> `pricing_tiers.id`| The applied pricing model. |
 | `tx_hash` | VARCHAR(66) | UNIQUE, NULL | The TX hash submitted by the client for verification. |
 | `status` | ENUM | DEFAULT 'PENDING' | `PENDING` -> `PAID` (Verified) or `FAILED`/`EXPIRED`. |
-| `amount_paid` | NUMERIC(78) | NULL | Actual value verified on-chain (Wei). |
+| `amount_paid` | DECIMAL(78, 18) | NULL | Actual value verified on-chain (Wei). |
+| `memo` | TEXT | NULL | Optional payment note or metadata. |
 | `created_at` | TIMESTAMPTZ | DEFAULT NOW() | When the 402 challenge was issued. |
 | `expires_at` | TIMESTAMPTZ | NOT NULL | Expiration time for the challenge (e.g., +15 mins). |
 | `verified_at` | TIMESTAMPTZ | NULL | Time of successful blockchain verification. |
@@ -144,6 +150,8 @@ CREATE TABLE IF NOT EXISTS listings (
     seller_id UUID NOT NULL REFERENCES users(id) ON DELETE CASCADE,
     name VARCHAR(100) NOT NULL,
     base_url TEXT NOT NULL,
+    origin_auth_header VARCHAR(100) DEFAULT 'Authorization',
+    origin_auth_value TEXT,
     description TEXT,
     categories TEXT[],
     is_active BOOLEAN DEFAULT TRUE,
@@ -167,7 +175,8 @@ CREATE TABLE IF NOT EXISTS transactions (
     pricing_tier_id UUID REFERENCES pricing_tiers(id),
     tx_hash VARCHAR(66) UNIQUE,
     status tx_status NOT NULL DEFAULT 'PENDING',
-    amount_paid NUMERIC(78, 0),
+    amount_paid DECIMAL(78, 18),
+    memo TEXT,
     created_at TIMESTAMPTZ DEFAULT NOW(),
     expires_at TIMESTAMPTZ NOT NULL,
     verified_at TIMESTAMPTZ
