--- a/docs/002.plan/002.dev/Phase1/003.db_schema_KOR.md
+++ b/docs/002.plan/002.dev/Phase1/003.db_schema_KOR.md
@@ -41,6 +41,8 @@ erDiagram
         uuid seller_id FK
         varchar name
         varchar base_url "오리진 API 엔드포인트"
+        varchar origin_auth_header "인증 헤더 키 (예: Authorization)"
+        text origin_auth_value "인증 값 (암호화됨)"
         boolean is_active
     }
 
@@ -59,6 +61,7 @@ erDiagram
         varchar tx_hash UK "온체인 TX 해시"
         varchar status "PENDING, PAID, FAILED"
         bigint amount_paid_wei
+        text memo "결제 메모"
         timestamp expires_at
         timestamp verified_at
     }
@@ -85,6 +88,8 @@ erDiagram
 | `seller_id` | UUID | FK -> `users.id` | 리스팅 소유자. |
 | `name` | VARCHAR(100) | NOT NULL | API 서비스 표시 이름. |
 | `base_url` | TEXT | NOT NULL | 요청을 프록시할 실제 업스트림 URL. |
+| `origin_auth_header` | VARCHAR(100) | DEFAULT 'Authorization' | 업스트림 인증을 위한 헤더 키. |
+| `origin_auth_value` | TEXT | NULL | 업스트림 인증을 위한 암호화된 자격 증명. |
 | `description` | TEXT | NULL | 마크다운을 지원하는 상세 설명. |
 | `categories` | TEXT[] | NULL | 검색을 위한 카테고리 태그 배열. |
 | `is_active` | BOOLEAN | DEFAULT TRUE | 소프트 삭제/일시 중지 토글. |
@@ -111,7 +116,8 @@ erDiagram
 | `pricing_tier_id`| UUID | FK -> `pricing_tiers.id`| 적용된 가격 모델. |
 | `tx_hash` | VARCHAR(66) | UNIQUE, NULL | 검증을 위해 클라이언트가 제출한 TX 해시. |
 | `status` | ENUM | DEFAULT 'PENDING' | `PENDING` -> `PAID` (검증됨) 또는 `FAILED`/`EXPIRED`. |
-| `amount_paid` | NUMERIC(78) | NULL | 온체인에서 확인된 실제 금액 (Wei). |
+| `amount_paid` | DECIMAL(78, 18) | NULL | 온체인에서 확인된 실제 금액 (Wei). |
+| `memo` | TEXT | NULL | 선택적 결제 메모 또는 메타데이터. |
 | `created_at` | TIMESTAMPTZ | DEFAULT NOW() | 402 챌린지 발급 시점. |
 | `expires_at` | TIMESTAMPTZ | NOT NULL | 챌린지 만료 시간 (예: +15분). |
 | `verified_at` | TIMESTAMPTZ | NULL | 블록체인 검증 성공 시점. |
@@ -144,6 +150,8 @@ CREATE TABLE IF NOT EXISTS listings (
     seller_id UUID NOT NULL REFERENCES users(id) ON DELETE CASCADE,
     name VARCHAR(100) NOT NULL,
     base_url TEXT NOT NULL,
+    origin_auth_header VARCHAR(100) DEFAULT 'Authorization',
+    origin_auth_value TEXT,
     description TEXT,
     categories TEXT[],
     is_active BOOLEAN DEFAULT TRUE,
@@ -167,7 +175,8 @@ CREATE TABLE IF NOT EXISTS transactions (
     pricing_tier_id UUID REFERENCES pricing_tiers(id),
     tx_hash VARCHAR(66) UNIQUE,
     status tx_status NOT NULL DEFAULT 'PENDING',
-    amount_paid NUMERIC(78, 0),
+    amount_paid DECIMAL(78, 18),
+    memo TEXT,
     created_at TIMESTAMPTZ DEFAULT NOW(),
     expires_at TIMESTAMPTZ NOT NULL,
     verified_at TIMESTAMPTZ
